Fix container vertical align center

--- a/apps/react-app-blog/src/styles/App.module.css
+++ b/apps/react-app-blog/src/styles/App.module.css
@@ -1,5 +1,4 @@
 .container {
   composes: container from './index.css';
   width: 100%;
-  margin-top: 0;
 }
