--- a/apps/react-app-blog/src/styles/index.css
+++ b/apps/react-app-blog/src/styles/index.css
@@ -13,7 +13,7 @@ a:visited {
 
 .container {
   max-width: 960px;
-  margin: auto;
+  margin: 0 auto;
   padding: 8px 24px;
 }
 
